Don't send focus accessibility events when tab isn't focused.

This regressed in r383885 (https://codereview.chromium.org/1815933002).
I meant to check if the focus callback was null, but instead I was
checking if the lazy instance pointer to the callback was null, which
is never true.

BUG=608033

Review-Url: https://codereview.chromium.org/1932383002
Cr-Commit-Position: refs/heads/master@{#390772}

Former-commit-id: e7d3cad741a52f6d40bc14b211c9fe372f57481d